--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Future.png" />
+    <link rel="icon" href="%PUBLIC_URL%/rocket.jpeg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
@@ -12,7 +12,7 @@
       name="description"
       content="Build your on-chain reputation at career socialfi platform - Future Protocol"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Future.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/rocket.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
