--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Build your on-chain reputation at career socialfi platform - Future Protocol"
+      content="All your NFTs in one place - lewk.app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/rocket.jpeg" />
     <!--
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Join now, to unlock your reputation economy at Future Protocol</title>
+    <title>All your NFTs in one place - lewk.app </title>
     <!-- <script>
       !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey="HQXKbK0xrLXQMKEDMGAztD4OJgvI30eO";;analytics.SNIPPET_VERSION="4.15.3";
       analytics.load("HQXKbK0xrLXQMKEDMGAztD4OJgvI30eO");
