--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,10 @@
 <!-- Google tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-241862550-1">
 </script>
+<!-- alchemy -->
+<!-- https://alchemy.com/?r=zc5Nzk1MjUwNTkzO -->
+<script>const BADGE_ID = 'zc5Nzk1MjUwNTkzO';</script>
+<script type="text/javascript" src="https://static.alchemyapi.io/scripts/analytics/badge-analytics.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
